--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "lint:fix": "vue-cli-service lint --fix",
+    "typecheck": "tsc"
   },
+  "pre-commit": [
+    "lint:fix",
+    "typecheck"
+  ],
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
@@ -32,6 +38,8 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^7.0.0-0",
+    "eslint-plugin-vue-a11y": "^0.0.31",
+    "pre-commit": "^1.2.2",
     "prettier": "^1.19.1",
     "typescript": "~3.9.3",
     "vue-jest": "^5.0.0-0"
