--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
     "lint:fix": "vue-cli-service lint --fix",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "lint:css": "stylelint '**/*.{js,ts}'",
+    "lint:all": "yarn lint:css && yarn lint:fix"
   },
   "pre-commit": [
-    "lint:fix",
+    "lint:all",
     "typecheck"
   ],
   "dependencies": {
     "core-js": "^3.6.5",
+    "styled-components": "^5.2.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
@@ -41,6 +44,10 @@
     "eslint-plugin-vue-a11y": "^0.0.31",
     "pre-commit": "^1.2.2",
     "prettier": "^1.19.1",
+    "stylelint": "^13.9.0",
+    "stylelint-config-recommended": "^3.0.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-processor-styled-components": "^1.10.0",
     "typescript": "~3.9.3",
     "vue-jest": "^5.0.0-0"
   }
