--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "esnext",
     "lib": [
-        "dom",
-        "dom.iterable",
-        "esnext"
+      "esnext",
+      "dom",
+      "dom.iterable",
+      "scripthost"
     ],
     "allowJs": true,
     "skipLibCheck": true,
