--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,10 +17,10 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
+    // "noEmit": true,
     "jsx": "preserve",
-    "noImplicitAny": true,
-    "strictPropertyInitialization": false,
+    // "noImplicitAny": true,
+    // "strictPropertyInitialization": false,
     "baseUrl": "./"
     // "target": "esnext",
     // "module": "esnext",
