--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,53 +1,35 @@
 {
   "compilerOptions": {
     "target": "esnext",
+    "module": "esnext",
+    "strict": true,
+    "jsx": "preserve",
+    "importHelpers": true,
+    "moduleResolution": "node",
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "sourceMap": false,
+    "baseUrl": ".",
+        "noEmit": true,
+      
+        // "noImplicitAny": true,
+        // "strictPropertyInitialization": false,
+    "types": [
+      "webpack-env",
+      "jest"
+    ],
+    "paths": {
+      "@/*": [
+        "src/*"
+      ]
+    },
     "lib": [
       "esnext",
       "dom",
       "dom.iterable",
       "scripthost"
-    ],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    // "noEmit": true,
-    "jsx": "preserve",
-    // "noImplicitAny": true,
-    // "strictPropertyInitialization": false,
-    "baseUrl": "./"
-    // "target": "esnext",
-    // "module": "esnext",
-    // "strict": true,
-    // "jsx": "preserve",
-    // "importHelpers": true,
-    // "moduleResolution": "node",
-    // "skipLibCheck": true,
-    // "esModuleInterop": true,
-    // "allowSyntheticDefaultImports": true,
-    // "sourceMap": false,
-    // "baseUrl": ".",
-    // "types": [
-    //   "webpack-env",
-    //   "jest"
-    // ],
-    // "paths": {
-    //   "@/*": [
-    //     "src/*"
-    //   ]
-    // },
-    // "lib": [
-    //   "esnext",
-    //   "dom",
-    //   "dom.iterable",
-    //   "scripthost"
-    // ]
+    ]
   },
   "include": [
     "src/**/*.ts",
