--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "typecheck"
   ],
   "dependencies": {
+    "@tailwindcss/postcss7-compat": "^2.0.2",
     "core-js": "^3.6.5",
     "styled-components": "^5.2.1",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
