--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
   "dependencies": {
     "@tailwindcss/postcss7-compat": "^2.0.2",
     "core-js": "^3.6.5",
-    "styled-components": "^5.2.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
+    "vue-styled-components": "^1.6.0",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
+    "@types/styled-components": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -46,6 +47,7 @@
     "eslint-plugin-vue-a11y": "^0.0.31",
     "pre-commit": "^1.2.2",
     "prettier": "^1.19.1",
+    "styled-components": "^5.2.1",
     "stylelint": "^13.9.0",
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-styled-components": "^0.1.1",
