--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,5 +1,16 @@
 {
   "extends": [
-    "stylelint-config-recommended",
-  ]
+     "stylelint-config-sass-guidelines",
+  ],
+  "rules": {
+    "at-rule-no-unknown": [
+      true, 
+      {
+        "ignoreAtRules": [
+          "extends",
+          "tailwind"
+        ]
+      }
+    ]
+  }
 }
