--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "typecheck"
   ],
   "dependencies": {
+    "@auth0/auth0-spa-js": "^1.13.6",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/vue-fontawesome": "^3.0.0-3",
