--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,7 @@
   "include": [
     "src/**/*.ts",
     "src/**/*.vue",
-    "tests/**/*.ts",
+    "tests/**/*.ts", "src/components/templates/Auth/index.js",
   ],
   "exclude": [
     "node_modules"
