--- a/package.json
+++ b/package.json
@@ -1,59 +1,55 @@
 {
-  "name": "vue3",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint",
-    "lint:fix": "vue-cli-service lint --fix",
-    "typecheck": "tsc",
-    "lint:css": "stylelint '**/*.{js,ts}'",
-    "lint:all": "yarn lint:css && yarn lint:fix"
-  },
-  "pre-commit": [
-    "lint:all",
-    "typecheck"
-  ],
-  "dependencies": {
-    "@auth0/auth0-spa-js": "^1.13.6",
-    "@fortawesome/fontawesome-svg-core": "^1.2.34",
-    "@fortawesome/free-solid-svg-icons": "^5.15.2",
-    "@fortawesome/vue-fontawesome": "^3.0.0-3",
-    "@tailwindcss/postcss7-compat": "npm:@tailwindcss/postcss7-compat",
-    "core-js": "^3.6.5",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
-    "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0"
-  },
-  "devDependencies": {
-    "@types/jest": "^24.0.19",
-    "@typescript-eslint/eslint-plugin": "^2.33.0",
-    "@typescript-eslint/parser": "^2.33.0",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-plugin-unit-jest": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
-    "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/eslint-config-typescript": "^5.0.2",
-    "@vue/test-utils": "^2.0.0-0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-vue": "^7.0.0-0",
-    "eslint-plugin-vue-a11y": "^0.0.31",
-    "pre-commit": "^1.2.2",
-    "prettier": "^1.19.1",
-    "sass": "^1.32.6",
-    "sass-loader": "10.1.1",
-    "stylelint": "^13.9.0",
-    "stylelint-config-sass-guidelines": "^7.1.0",
-    "typescript": "~3.9.3",
-    "vue-jest": "^5.0.0-0"
-  }
+    "name": "vue3",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "serve": "vue-cli-service serve",
+        "build": "vue-cli-service build",
+        "test:unit": "vue-cli-service test:unit",
+        "lint": "vue-cli-service lint",
+        "lint:fix": "vue-cli-service lint --fix",
+        "typecheck": "tsc",
+        "lint:css": "stylelint '**/*.{js,ts}'",
+        "lint:all": "yarn lint:css && yarn lint:fix"
+    },
+    "dependencies": {
+        "@auth0/auth0-spa-js": "^1.13.6",
+        "@fortawesome/fontawesome-svg-core": "^1.2.34",
+        "@fortawesome/free-solid-svg-icons": "^5.15.2",
+        "@fortawesome/vue-fontawesome": "^3.0.0-3",
+        "@tailwindcss/postcss7-compat": "npm:@tailwindcss/postcss7-compat",
+        "core-js": "^3.6.5",
+        "lint-staged": "^10.5.4",
+        "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+        "vue": "^3.0.0",
+        "vue-router": "^4.0.0-0",
+        "vuex": "^4.0.0-0"
+    },
+    "devDependencies": {
+        "@types/jest": "^24.0.19",
+        "@typescript-eslint/eslint-plugin": "^2.33.0",
+        "@typescript-eslint/parser": "^2.33.0",
+        "@vue/cli-plugin-babel": "~4.5.0",
+        "@vue/cli-plugin-eslint": "~4.5.0",
+        "@vue/cli-plugin-router": "~4.5.0",
+        "@vue/cli-plugin-typescript": "~4.5.0",
+        "@vue/cli-plugin-unit-jest": "~4.5.0",
+        "@vue/cli-plugin-vuex": "~4.5.0",
+        "@vue/cli-service": "~4.5.0",
+        "@vue/compiler-sfc": "^3.0.0",
+        "@vue/eslint-config-prettier": "^6.0.0",
+        "@vue/eslint-config-typescript": "^5.0.2",
+        "@vue/test-utils": "^2.0.0-0",
+        "eslint": "^6.7.2",
+        "eslint-plugin-prettier": "^3.1.3",
+        "eslint-plugin-vue": "^7.0.0-0",
+        "eslint-plugin-vue-a11y": "^0.0.31",
+        "prettier": "^1.19.1",
+        "sass": "^1.32.6",
+        "sass-loader": "10.1.1",
+        "stylelint": "^13.9.0",
+        "stylelint-config-sass-guidelines": "^7.1.0",
+        "typescript": "~3.9.3",
+        "vue-jest": "^5.0.0-0"
+    }
 }
