--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "eslint-plugin-prettier": "^3.1.3",
         "eslint-plugin-vue": "^7.0.0-0",
         "eslint-plugin-vue-a11y": "^0.0.31",
+        "husky": "^5.0.9",
         "prettier": "^1.19.1",
         "sass": "^1.32.6",
         "sass-loader": "10.1.1",
