--- a/.huskyrc.json
+++ b/.huskyrc.json
@@ -1,7 +1,7 @@
 {
-  "hooks": {
-    "post-checkout": "yarn",
-    "pre-commit": "lint-staged",
-    "post-commit": "test, git status"
-  }
+    "hooks": {
+        "post-checkout": "yarn",
+        "pre-commit": "lint-staged && yarn test:unit",
+        "post-commit": "git status"
+    }
 }
