--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
         "lint:fix": "vue-cli-service lint --fix",
         "typecheck": "tsc",
         "lint:css": "stylelint '**/*.{js,ts}'",
-        "lint:all": "yarn lint:css && yarn lint:fix"
+        "lint:all": "yarn lint:css && yarn lint:fix",
+        "prettier": "prettier --check '**/*.{ts,js,vue,json,md}'",
+        "prettier:fix": "prettier --write '**/*.{ts,js,vue,json,md}'"
     },
     "dependencies": {
         "@auth0/auth0-spa-js": "^1.13.6",
@@ -44,7 +46,7 @@
         "eslint-plugin-prettier": "^3.1.3",
         "eslint-plugin-vue": "^7.0.0-0",
         "eslint-plugin-vue-a11y": "^0.0.31",
-        "husky": "^5.0.9",
+        "husky": "^4.3.8",
         "prettier": "^1.19.1",
         "sass": "^1.32.6",
         "sass-loader": "10.1.1",
