--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
         "core-js": "^3.6.5",
         "lint-staged": "^10.5.4",
         "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+        "vee-validate": "^4.2.1",
         "vue": "^3.0.0",
         "vue-router": "^4.0.0-0",
-        "vuex": "^4.0.0-0"
+        "vuex": "^4.0.0-0",
+        "yup": "^0.32.9"
     },
     "devDependencies": {
         "@types/jest": "^24.0.19",
