--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@fortawesome/free-solid-svg-icons": "^5.15.2",
         "@fortawesome/vue-fontawesome": "^3.0.0-3",
         "@tailwindcss/postcss7-compat": "npm:@tailwindcss/postcss7-compat",
+        "axios": "^0.21.1",
         "core-js": "^3.6.5",
         "lint-staged": "^10.5.4",
         "tailwindcss": "npm:@tailwindcss/postcss7-compat",
